--- a/maze-webpack/src/maze.css
+++ b/maze-webpack/src/maze.css
@@ -1,25 +1,30 @@
 #maze
 {
   margin-top: 50px;
-	border-style: solid;
-  height: 110px;
-  width: 110px;
+	/*border-style: solid;*/
+  height: 445px;
+  width: 445px;
 }
 .block
 {
 	float: left;
-	height: 10px;
-	width: 10px;
+	height: 20px;
+	width: 20px;
+  border: .5px dashed #000;
 }
 .wall
 {
 	background-color: #000;
 }
-.me
-{
-  position: relative;
+.road {
+  background: silver;
 }
-.me:after
+.start
+{
+  border-left: none;
+  /*position: relative;*/
+}
+/*.me:after
 {
   background-color: #23afee;
   border-radius: 0%;
@@ -28,18 +33,18 @@
   position: absolute;
   top: 0;
   width: 10px;
-}
+}*/
 .finish
 {
-  background-color: #f31d1d;
+ border-right: none;
 }
 #complete
 {
   display: none;
-  height: 115px;
+  height: 515px;
   position: absolute;
   top: 50px;
-  width: 115px;
+  width: 515px;
   z-index: -1;
   background-color: red;
 }
