--- a/Sell-It/src/app/app.component.html
+++ b/Sell-It/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!--<app-login-page></app-login-page>-->
-<app-datail-page></app-datail-page>
+<!--<app-datail-page></app-datail-page>-->
+<app-product-list></app-product-list>
